--- a/src/components/SearchItems/SearchItems.scss
+++ b/src/components/SearchItems/SearchItems.scss
@@ -1,12 +1,38 @@
-.search-icon {
-  width: 22px;
-  // height: 22px;
-  border: none;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-image: url('../../assets/icons8-search.svg');
-  cursor: pointer;
-  &:hover {
-    background-color: #cad4d4;
+.search-container {
+  position: relative;
+  .search-icon {
+    width: 22px;
+    height: 22px;
+    border: none;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url('../../assets/icons8-search.svg');
+    cursor: pointer;
+    &:hover {
+      background-color: #cad4d4;
+    }
+    &.active-search {
+      background-color: #aff0da;
+    }
+  }
+
+  .search-popup {
+    position: absolute;
+    bottom: -50px;
+    right: 0;
+    width: 150px;
+    padding: 7px;
+    border-radius: 2px;
+    background-color: #fcfafa;
+    box-shadow: 0 0 5px 2px #a0a0b3;
+    .search-input {
+      width: 95%;
+    }
+    .buttons-block {
+      //
+      .button-styled {
+        margin: 7px 5px 0 5px;
+      }
+    }
   }
 }
