feat: implement sort with shift

--- a/src/components/SortItems/SortItems.scss
+++ b/src/components/SortItems/SortItems.scss
@@ -2,25 +2,24 @@
   display: flex;
   flex-direction: column;
   margin: 0 0.25rem;
-  .sort-icon {        
-    width: 11px;
-    height: 11px;
+  .sort-icon {
+    width: 18px;
+    height: 18px;
     border: none;
     background-size: contain;
     background-repeat: no-repeat;
     opacity: 0.3;
     cursor: pointer;
+    background-image: url('../../assets/sort-up.svg');
+    &:hover {
+      opacity: 0.5;
+    }
     &.icon-up {
-      background-image: url('../../assets/sort-up.svg');
-      &.active {
-        opacity: 1;
-      }
+      opacity: 1;
     }
     &.icon-down {
-      background-image: url('../../assets/sort-down.svg');
-      &.active {
-        opacity: 1;
-      }
+      opacity: 1;
+      transform: rotate(180deg);
     }
   }
 }
