--- a/src/containers/ReactDataGrid/ReactDataGrid.scss
+++ b/src/containers/ReactDataGrid/ReactDataGrid.scss
@@ -1,3 +1,10 @@
 .react-data-grid {
-  height: 100%;
+  flex-grow: 1;
+}
+
+
+.sticky {
+  position: sticky !important;
+  position: -webkit-sticky !important;
+  z-index: 2;
 }
