--- a/src/components/DataCellAvatar/DataCellAvatar.scss
+++ b/src/components/DataCellAvatar/DataCellAvatar.scss
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0 5px;
+  box-sizing: border-box;
   .avatar-image {
     width: 30px;
     height: 30px;
