--- a/src/components/DataCellBool/DataCellBool.scss
+++ b/src/components/DataCellBool/DataCellBool.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   padding: 0 5px;
+  box-sizing: border-box;
   .flag-state {
     width: 15px;
     height: 15px;
