--- a/src/components/DataCellSelect/DataCellSelect.scss
+++ b/src/components/DataCellSelect/DataCellSelect.scss
@@ -1,11 +1,10 @@
-.object-block {
+.select-block {
   display: flex;
   justify-content: flex-end;
   align-items: center;
   padding: 0 5px;
-  color: #5050e6;
   box-sizing: border-box;
-  .span-item {
-    margin: 0 2px;
+  .select-item {
+    //
   }
 }
