--- a/src/components/HeaderDataCell/HeaderDataCell.scss
+++ b/src/components/HeaderDataCell/HeaderDataCell.scss
@@ -2,14 +2,15 @@
   display: grid;
   grid-template-columns: 1fr auto;
   border-right: 1px solid #7ef5cd;
-  padding: 0 5px;
+  padding: 5px 5px 0;
+  box-sizing: border-box;
   &:first-child {
     border-left: 1px solid #7ef5cd;
   }
   .title-container {
     display: flex;
     .cell-title {
-      //
+      user-select: none;
     }
   }  
 }
