--- a/src/containers/Filters/Filters.scss
+++ b/src/containers/Filters/Filters.scss
@@ -1,5 +1,6 @@
 .filters-container {
   padding: 10px;
-  margin: 10px 0;
-  border: 1px solid #777777;
+  margin: 10px;
+  border: 1px solid #b4b4b4;
+  box-shadow: 0 0 5px 1px #b4b4b4;
 }
