feat: implement fixed left columns

--- a/src/components/DataCellText/DataCellText.scss
+++ b/src/components/DataCellText/DataCellText.scss
@@ -9,7 +9,8 @@
     color: #319781;
     font-weight: 700;
   }
-  .large-text {
+
+  .cell-text {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
