--- a/src/components/HeaderDataCell/HeaderDataCell.scss
+++ b/src/components/HeaderDataCell/HeaderDataCell.scss
@@ -7,6 +7,9 @@
   &:first-child {
     border-left: 1px solid #7ef5cd;
   }
+  &.sticky {
+    background-color: #ffffff;
+  }
   .title-container {
     display: flex;
     .cell-title {
